--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "filber",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "babel.config.js",
   "license": "MIT",
+  "scripts": {
+    "start": "npm-run-all --parallel dev:*",
+    "dev:server-compile": "webpack --config webpack.config.server.js --watch",
+    "dev:server": "nodemon ./build/server.js"
+  },
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.10",
